sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:5: error: not found: value nbEchange
    nbEchange = 0
    ^AlgBubbleSort2:9: error: not found: value nbEchange
        nbEchange = nbEchange+1
        ^